Update admin configuration options (#49)
* Add `allow_blank` option to field
* Require a value on fields that do not `allow_blank`
* Set field to default value if submitted blank when `allow_blank` is 
`false`.
* Remove `search_facet_default_sort` as admin configuration field to 
prevent confusion.

No changelog

--- a/admin/app/views/workarea/admin/configurations/types/_duration.html.haml
+++ b/admin/app/views/workarea/admin/configurations/types/_duration.html.haml
@@ -1,2 +1,2 @@
-= number_field_tag "configuration[#{field.key}][]", value.parts.values.first, id: nil, class: 'text-box text-box--small', step: 1
+= number_field_tag "configuration[#{field.key}][]", value.parts.values.first, id: nil, class: 'text-box text-box--small', step: 1, required: !field.allow_blank?
 = select_tag "configuration[#{field.key}][]", options_for_select(duration_field_options, value.parts.keys.first.to_s), id: nil
