Allow setting active by segment
This allows configuring releasable resources to be active only for
certain segments. If no segments are specified, it will be active
globally. If segments are specified, only those segments will be able to
see it.

For #102

--- a/admin/app/assets/javascripts/workarea/admin/application.js.erb
+++ b/admin/app/assets/javascripts/workarea/admin/application.js.erb
@@ -197,6 +197,9 @@ window.feature.testAll();
     workarea/admin/modules/impersonation_notification
     workarea/admin/modules/timeline_report_chart
     workarea/admin/modules/jump_to_menus
+    workarea/admin/modules/active_by_segment_tooltips
+    workarea/admin/modules/toggle
+    workarea/admin/modules/select2
   ).each do |asset|
     require_asset asset
   end
