--- a/admin/app/views/workarea/admin/create_pricing_discounts/publish.html.haml
+++ b/admin/app/views/workarea/admin/create_pricing_discounts/publish.html.haml
@@ -12,6 +12,7 @@
         .grid.grid--center
           .grid__cell.grid__cell--40-at-medium
             = render 'workarea/admin/releases/publish'
+            = render 'workarea/admin/segments/publish', model: @discount
 
       .workflow-bar
         .grid.grid--middle
