--- a/admin/app/views/workarea/admin/navigation_menus/edit.html.haml
+++ b/admin/app/views/workarea/admin/navigation_menus/edit.html.haml
@@ -30,7 +30,7 @@
         %span.property__name
           = t('workarea.admin.fields.active')
           = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
-        = toggle_button_for 'menu[active]', @menu.active?
+        = render 'workarea/admin/shared/active_field', scope: 'menu', model: @menu
 
       .workflow-bar
         .grid.grid--middle
