--- a/admin/app/views/workarea/admin/segments/index.html.haml
+++ b/admin/app/views/workarea/admin/segments/index.html.haml
@@ -6,37 +6,15 @@
       .grid__cell.grid__cell--50
         .view__heading
           = link_to "↑ #{t('workarea.admin.segments.index.dashboard_link')}", people_dashboards_path, class: 'view__dashboard-button'
-          %h1= t('workarea.admin.segments.index.page_title')
+          %h1.heading--no-margin= t('workarea.admin.segments.index.page_title')
+          %p= t('workarea.admin.segments.index.description')
 
   .view__container
-    .browsing-controls.browsing-controls--with-divider.browsing-controls--center{ class: ('browsing-controls--filters-displayed' unless @search.toggle_facets?) }
-      = form_tag segments_path, method: 'get', id: 'search_form', class: 'browsing-controls__form' do
-        = facet_hidden_inputs(@search.facets)
-        .browsing-controls__sort
-          .property.property--inline
-            = label_tag 'sort', t('workarea.admin.search.sort_by'), class: 'property__name'
-            = select_tag :sort, options_for_select(@search.sorts, selected: @search.sort), data: { form_submitting_control: '' }
+    .browsing-controls.browsing-controls--with-divider.browsing-controls--center
+      %p.browsing-controls__count
+        = t('workarea.admin.segments.index.segment', count: @segments.count)
 
-        .browsing-controls__search
-          .search-form
-            = text_field_tag :q, params[:q], class: 'search-form__input', id: 'search_products', title: t('workarea.admin.search.keywords'), placeholder: t('workarea.admin.search.keywords')
-            = submit_tag 'search_segments', class: 'search-form__button'
-
-        = render 'workarea/admin/shared/creation_date', search: @search, form_path: segments_path
-
-        - @search.facets.each do |facet|
-          = render "workarea/admin/facets/#{facet.type}", facet: facet
-
-        - if @search.toggle_facets?
-          .browsing-controls__toggle-filters
-            %button.text-button{ type: 'button', data: { toggle_filters: '' } }= t('workarea.admin.search.show_filters')
-
-      = render 'workarea/admin/facets/applied', search: @search, reset_path: segments_path
-
-      %p.browsing-controls__count{ data: { browsing_controls_count: @search.total } }
-        = t('workarea.admin.segments.index.segment', count: @search.total)
-
-    - if @search.results.any?
+    - if @segments.any?
       %table.index-table
         %thead
           %tr
@@ -52,27 +30,24 @@
             %th.align-center= t('workarea.admin.fields.insights')
             %th= t('workarea.admin.fields.updated_at')
         %tbody
-          - @search.results.each do |result|
+          - @segments.each do |segment|
             %tr.index-table__row
               %td.index-table__control-cell
                 .checkbox
-                  = check_box_tag 'global_id', result.to_gid_param, false, class: 'checkbox__input', id: dom_id(result), data: { bulk_action_item: '' }
-                  = label_tag dom_id(result), '', class: 'checkbox__label', title: t('workarea.admin.bulk_actions.add_summary_button')
+                  = check_box_tag 'global_id', segment.to_gid_param, false, class: 'checkbox__input', id: dom_id(segment), data: { bulk_action_item: '' }
+                  = label_tag dom_id(segment), '', class: 'checkbox__label', title: t('workarea.admin.bulk_actions.add_summary_button')
               %td
-                = link_to result.name, segment_path(result)
-                = comments_icon_for(result)
-              %td= result.life_cycle? ? t('workarea.admin.segments.index.life_cycle') : t('workarea.admin.segments.index.custom')
-              %td.align-center= number_with_delimiter result.insights.orders
-              %td.align-center= number_to_currency result.insights.average_order_value
-              %td.align-center= result.rules.size
+                = link_to segment.name, segment_path(segment)
+                = comments_icon_for(segment)
+              %td= segment.life_cycle? ? t('workarea.admin.segments.index.life_cycle') : t('workarea.admin.segments.index.custom')
+              %td.align-center= number_with_delimiter segment.insights.orders
+              %td.align-center= number_to_currency segment.insights.average_order_value
+              %td.align-center= segment.rules.size
               %td.align-center
-                = link_to insights_segment_path(result), class: 'link link--no-underline' do
+                = link_to insights_segment_path(segment), class: 'link link--no-underline' do
                   %span.spark{ title: t('workarea.admin.segments.index.sparkline_title') }
-                    {#{sparkline_analytics_data_for(result.insights.orders_sparkline).join(',')}}
-              %td= local_time_ago(result.updated_at)
-
-      - if @search.results.total_pages > 1
-        = render 'workarea/admin/shared/pagination', collection: @search.results
+                    {#{sparkline_analytics_data_for(segment.insights.orders_sparkline).join(',')}}
+              %td= local_time_ago(segment.updated_at)
 
   .workflow-bar
     .grid
