--- a/admin/app/views/workarea/admin/create_catalog_categories/publish.html.haml
+++ b/admin/app/views/workarea/admin/create_catalog_categories/publish.html.haml
@@ -16,6 +16,7 @@
         .grid.grid--center
           .grid__cell.grid__cell--40-at-medium
             = render 'workarea/admin/releases/publish'
+            = render 'workarea/admin/segments/publish', model: @category
 
       .workflow-bar
         .grid.grid--middle
