--- a/admin/app/views/workarea/admin/pricing_discounts/edit.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/edit.html.haml
@@ -34,7 +34,8 @@
           %span.property__name
             = t('workarea.admin.fields.active')
             = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
-          = toggle_button_for 'discount[active]', @discount.active?
+          = render 'workarea/admin/shared/active_field', scope: 'discount', model: @discount
+
 
         .grid
           .grid__cell.grid__cell--33.grid__cell--25-at-medium
