--- a/admin/app/views/workarea/admin/search_customizations/edit.html.haml
+++ b/admin/app/views/workarea/admin/search_customizations/edit.html.haml
@@ -23,7 +23,7 @@
         %span.property__name
           = t('workarea.admin.fields.active')
           = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
-        = toggle_button_for 'customization[active]', @customization.active?
+        = render 'workarea/admin/shared/active_field', scope: 'customization', model: @customization
 
       .section
         %h2= t('workarea.admin.search_customizations.edit.query_rewrite')
