Fix showing comments without authors in admin
Comments generated in plugins don't have an author; update the view to
handle rendering when the `author_id` is nil.

--- a/admin/app/views/workarea/admin/comments/index.html.haml
+++ b/admin/app/views/workarea/admin/comments/index.html.haml
@@ -19,10 +19,11 @@
         - @comments.each do |comment|
           %li.comments__comment
             .comments__comment-header
-              .comments__comment-avatar
-                = link_to user_path(comment.author) do
-                  = avatar_for comment.author, additional_css_class: 'avatar'
-              %h3.comments__comment-author= link_to comment.author_name, user_path(comment.author)
+              - if comment.author.present?
+                .comments__comment-avatar
+                  = link_to user_path(comment.author) do
+                    = avatar_for comment.author, additional_css_class: 'avatar'
+                %h3.comments__comment-author= link_to comment.author_name, user_path(comment.author)
               %p.comments__comment-time #{time_ago_in_words(comment.created_at)} ago
               .comments__comment-actions
                 - if comment.author == current_user
