Update docs to reflect changes in Workarea 3.5
* Storefront price partial removed
* `Workarea.with_config` obsoleted by automatic resetting
  of configuration between tests
* Changes to headless Chrome configuration
* Changes to Sidekiq queues
* Addition of `query_cache` Sidekiq option

--- a/docs/source/articles/products.html.md.erb
+++ b/docs/source/articles/products.html.md.erb
@@ -931,7 +931,7 @@ For each product that _is_ displayed, a view model and several partials and UI c
 - `Workarea::Storefront::ProductViewModel`
 - _workarea/storefront/products/\_summary.html.haml_
 - _workarea/storefront/products/\_pricing.html.haml_
-- _workarea/storefront/products/\_price.html.haml_
+- _workarea/storefront/products/\_price.html.haml_ (removed in Workarea 3.5.0)
 - `.product-summary`
 - `.product-prices`
 
@@ -1102,7 +1102,7 @@ For each product that _is_ displayed, a view model and several partials and UI c
 - _workarea/storefront/products/show.html.haml_
 - _workarea/storefront/products/templates/\_generic.html.haml_
 - _workarea/storefront/products/\_pricing.html.haml_
-- _workarea/storefront/products/\_price.html.haml_
+- _workarea/storefront/products/\_price.html.haml_ (removed in Workarea 3.5.0)
 - `.product-detail-container`
 - `.product-details`
 - `.product-prices`
