--- a/admin/app/views/workarea/admin/orders/_cards.html.haml
+++ b/admin/app/views/workarea/admin/orders/_cards.html.haml
@@ -163,6 +163,9 @@
                 %strong= t('workarea.admin.orders.cards.fulfillment.packages')
                 = model.packages.size
               %li
+                %strong= t('workarea.admin.orders.cards.fulfillment.tokens')
+                = model.fulfillment.tokens.size
+              %li
                 %strong= t('workarea.admin.orders.cards.fulfillment.cancellations')
                 = model.cancellations.size
               %li
