--- a/admin/app/views/workarea/admin/fulfillment_tokens/index.html.haml
+++ b/admin/app/views/workarea/admin/fulfillment_tokens/index.html.haml
@@ -58,6 +58,7 @@
                 %td.align-center= number_with_delimiter(token.downloads)
                 %td
                   = form_tag fulfillment_sku_token_path(@sku, token), method: 'patch', class: 'text-button text-button--update' do
+                    = hidden_field_tag 'return_to', request.url
                     = toggle_button_for 'token[enabled]', token.enabled?, id: token.id, data: { form_submitting_control: '' }
                 %td.align-right= local_time_ago(token.updated_at)
 
