--- a/admin/app/views/workarea/admin/style_guides/components/_activity_group.html.haml
+++ b/admin/app/views/workarea/admin/style_guides/components/_activity_group.html.haml
@@ -25,12 +25,10 @@
                 .grid.grid--auto
                   .grid__cell
                     = button_tag value: 'edit_changes', class: 'text-button' do
-                      %span Edit
-                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon')
+                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon', title: 'Edit')
                   .grid__cell
-                    = button_tag value: 'delete_changeset', class: 'text-button' do
-                      %span= t('workarea.admin.actions.delete')
-                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon')
+                    = button_tag value: 'delete_changeset', class: 'text-button text-button--destroy' do
+                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon', title: 'Delete')
             .activity__message
               Your mom created a product.
 
@@ -44,12 +42,10 @@
                 .grid.grid--auto
                   .grid__cell
                     = button_tag value: 'edit_changes', class: 'text-button' do
-                      %span Edit
-                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon')
+                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon', title: 'Edit')
                   .grid__cell
-                    = button_tag value: 'delete_changeset', class: 'text-button' do
-                      %span= t('workarea.admin.actions.delete')
-                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon')
+                    = button_tag value: 'delete_changeset', class: 'text-button text-button--destroy' do
+                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon', title: 'Delete')
             .activity__message
               Your mom created a product.
 
@@ -70,11 +66,9 @@
                 .grid.grid--auto
                   .grid__cell
                     = button_tag value: 'edit_changes', class: 'text-button' do
-                      %span Edit
-                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon')
+                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon', title: 'Edit')
                   .grid__cell
-                    = button_tag value: 'delete_changeset', class: 'text-button' do
-                      %span= t('workarea.admin.actions.delete')
-                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon')
+                    = button_tag value: 'delete_changeset', class: 'text-button text-button--destroy' do
+                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon', title: 'Delete')
             .activity__message
               Your mom created a product.
