--- a/admin/app/views/workarea/admin/style_guides/components/_release_changeset.html.haml
+++ b/admin/app/views/workarea/admin/style_guides/components/_release_changeset.html.haml
@@ -38,12 +38,10 @@
                 .grid.grid--auto
                   .grid__cell
                     = button_tag value: 'edit_changes', class: 'text-button' do
-                      %span Edit
-                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon')
+                      = inline_svg('workarea/admin/icons/edit.svg', class: 'text-button__icon', title: 'Edit')
                   .grid__cell
-                    = button_tag value: 'delete_changeset', class: 'text-button' do
-                      %span= t('workarea.admin.actions.delete')
-                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon')
+                    = button_tag value: 'delete_changeset', class: 'text-button text-button--destroy' do
+                      = inline_svg('workarea/admin/icons/delete.svg', class: 'text-button__icon', title: 'Delete')
             .activity__message
               .release-changeset.release-changeset--activity
                 %ul.release-changeset__list
