--- a/admin/app/assets/stylesheets/workarea/admin/components/_activity.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/components/_activity.scss
@@ -7,19 +7,28 @@ $activity-message-color: $dark-gray !default;
 $activity-time-color:    $dark-gray !default;
 $activity-bg-color:      $white !default;
 $activity-border-color:  $border-color !default;
+$activity-box-shadow: 0 2px 8px rgba($off-black, 0.5) !default;
+$activity-border-radius: $global-border-radius !default;
+$activity-message-border: 1px solid $off-white !default;
+$activity-in-card-border: 1px solid $light-gray !default;
 
 $activity-avatar-size:  32px !default;
 
 
 .activity {
     @extend %clearfix;
-    padding: $spacing-unit;
-    width: 100%;
+    position: relative;
+    padding: ($spacing-unit * 2) $spacing-unit ($spacing-unit * 2) ($activity-avatar-size / 2);
     color: $activity-color;
     background: $activity-bg-color;
+    box-shadow: $activity-box-shadow;
+    margin-bottom: $spacing-unit * 2;
+    margin-left: $activity-avatar-size / 2;
+    border-radius: $activity-border-radius;
 
-    & + & {
-        border-top: 1px solid $activity-border-color;
+    .card & {
+        box-shadow: none;
+        border: $activity-in-card-border;
     }
 }
 
@@ -28,7 +37,9 @@ $activity-avatar-size:  32px !default;
     }
 
         .activity__avatar {
-            float: left;
+            position: absolute;
+            transform: translateX(-100%);
+            width: $activity-avatar-size;
             height: $activity-avatar-size;
         }
 
@@ -36,37 +47,25 @@ $activity-avatar-size:  32px !default;
             @extend %heading;
             @extend %heading--3;
             @extend %heading--no-margin;
-            float: left;
-            width: calc(100% - #{$activity-avatar-size});
-            padding-top: $spacing-unit / 2;
             padding-left: $spacing-unit;
-            line-height: normal;
         }
 
         .activity__time {
-            clear: both;
-            display: block;
             color: $activity-time-color;
-
-            .card & {
-                display: block;
-                font-size: 0.8rem;
-                margin-left: $activity-avatar-size + $spacing-unit;
-                margin-bottom: $spacing-unit;
-            }
-
-            time { // injected via JS
-                display: inline-block;
-                vertical-align: middle;
-            }
+            padding-left: $spacing-unit;
+            margin-bottom: 0;
         }
 
         .activity__actions {
-            float: right;
+            position: absolute;
+            top: $spacing-unit;
+            right: $spacing-unit;
         }
 
         .activity__message {
-            margin-left: $activity-avatar-size + $spacing-unit;
             color: $activity-message-color;
+            padding: $spacing-unit $spacing-unit 0;
+            margin-top: $spacing-unit;
+            border-top: $activity-message-border;
         }
 
