Surface Asset alt text and behavior within Content Blocks (#95)
In an effort to make the recent updates to alt text overridding in
Content Blocks a bit clearer, alt text is now being output:

- On the content assets index view
- In the title for a content asset summary

Default alt text has been removed from the Content block DSL, which
makes the default text come directly from the Asset itself.

The help text displayed on Asset Content Blocks always appears now,
better explaining the behavior of this feature.

--- a/admin/app/views/workarea/admin/content_assets/_summary.html.haml
+++ b/admin/app/views/workarea/admin/content_assets/_summary.html.haml
@@ -1,7 +1,7 @@
 = link_to content_asset_path(model), class: 'summary', data: { asset: { id: model.id.to_s, name: model.name, url: model.url } } do
   .summary__image-container
     - if model.image?
-      = image_tag model.file.process(:medium).url, alt: model.name, class: 'summary__image'
+      = image_tag model.file.process(:medium).url, alt: model.name, class: 'summary__image', title: model.alt_text
   %span.summary__name= model.name
   .summary__info-container
     .summary__info= local_time_ago(model.updated_at)
