--- a/admin/app/views/workarea/admin/content_assets/index.html.haml
+++ b/admin/app/views/workarea/admin/content_assets/index.html.haml
@@ -55,6 +55,7 @@
                 = label_tag 'select_all', t('workarea.admin.bulk_actions.select_all'), class: 'checkbox__label'
             %th= t('workarea.admin.fields.image')
             %th= t('workarea.admin.fields.name')
+            %th= t('workarea.admin.fields.alt_text')
             %th= t('workarea.admin.fields.file_name')
             %th= t('workarea.admin.fields.type')
             %th.align-center= t('workarea.admin.fields.dimensions')
@@ -77,6 +78,11 @@
                 = upcoming_changesets_icon_for(result)
                 = comments_icon_for(result)
                 = favicon_icon_for(result)
+              %td
+                - if result.image? && result.alt_text.present?
+                  %span{ title: result.alt_text }= result.alt_text.truncate(30)
+                - else
+                  \-
               %td= result.file_name
               %td= result.type
               %td.align-center
