--- a/admin/app/views/workarea/admin/pricing_skus/edit.html.haml
+++ b/admin/app/views/workarea/admin/pricing_skus/edit.html.haml
@@ -25,7 +25,7 @@
           %span.property__name
             = t('workarea.admin.fields.active')
             = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
-          = render 'workarea/admin/shared/active_field', scope: 'sku', model: @sku
+          = toggle_button_for 'sku[active]', @sku.active?
 
         .property
           = label_tag 'sku[tax_code]', t('workarea.admin.fields.tax_code'), class: 'property__name'
